# LLMInferenceService

./: .gitignore  Cargo.toml  README.md  proposal.md
chat_interface/: package-lock.json  package.json
chat_interface/src/: App.js  global.css
chat_interface/src/components/: FileUpload.jsx  FileUpload.module.css  MessageContent.jsx  MessageContent.module.css  ModelSelector.js  ModelSelector.module.css  Sidebar.jsx  Sidebar.module.css  StreamChat.js  StreamChat.module.css
src/: error.rs  file_parser.rs  handler.rs  main.rs  mistral_runner.rs  model.rs  session.rs  tokenizer.rs  types.rs
