[package]
name = "LLMInferenceService"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Axum Web Server ---
axum = {version = "0.8.7", features = ["default", "multipart"]}                         # Only one version
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "compression-full"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- MistralRS (GGUF) ---
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["cuda"] }

# --- Utilities ---
anyhow = "1"
futures = "0.3.31"
tokio-stream = "0.1"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
uuid = "1.19.0"
pdf = "0.9.0"
docx-rs = "0.4.18"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# --- Burn (keep original project functionality) ---
burn = { version = "0.19.1", features = ["wgpu"] }
burn-wgpu = "0.19.1"